--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sanjana RVB | Web Developer Portfolio</title>
-    <meta name="description" content="Portfolio of Sanjana RVB - A passionate web developer specializing in HTML, CSS, JavaScript, and React. View my projects and get in touch." />
+
+    <meta
+      name="description"
+      content="Portfolio of Sanjana RVB - A passionate web developer skilled in creating responsive and modern web applications."
+    />
     <meta name="author" content="Sanjana RVB" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
+
+    <!-- Open Graph (for social sharing) -->
     <meta property="og:title" content="Sanjana RVB | Web Developer Portfolio" />
-    <meta property="og:description" content="Portfolio of Sanjana RVB - A passionate web developer specializing in HTML, CSS, JavaScript, and React." />
+    <meta
+      property="og:description"
+      content="Showcasing projects, skills, and achievements in web development."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Replace with your own portfolio screenshot -->
+    <meta property="og:image" content="/preview.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
